[package]
name = "risp"
version = "0.1.0"
authors = ["Gustavo <nowayhecodes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
pretty_env_logger = "0.4"
rustyline = "6.0"
structopt = "0.3"

[dev-dependencies]
pretty_assertions = "0.6"